# dissonance-lab

./: .gitignore  AUDIO_ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  README.md  TODO.md  Trunk.toml  audio-worklet.js  audio-worklet_bg.wasm  audioworklet-debug.html  build-all.sh  build-audio-worklet.sh  check.sh  dev  direct-test.html  dissonance-lab.js  dissonance-lab_bg.wasm  dissonance_worklet_processor.js  generate-build-config.sh  generate-config.sh  generate-index.sh  index.html  index.template.html  js-audio-processor.js  minimal-processor.js  sw.js  test-worklet.html  test.sh  ultra-minimal-processor.js
.cargo/: config.toml
.github/: copilot-instruction.md  copilot-instructions.md
.github/prompts/: commit.prompt.md  todo-act.prompt.md  todo-compact.prompt.md
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
audio-engine/: Cargo.toml
audio-engine/src/: lib.rs  synth.rs
audio-types/: Cargo.toml
audio-types/src/: lib.rs
audio-worklet/: Cargo.toml  Trunk.toml  dissonance_worklet_processor.js  index.html  worklet.js
audio-worklet/pkg/: .gitkeep
audio-worklet/src/: inharmonicity.rs  lib.rs  limiter.rs  main.rs  reverb.rs  synth.rs
audio-worklet/src/synth/: envelope.rs
dev-log-server/: Cargo.toml
dev-log-server/src/: main.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: app.rs  audio.rs  audio_worklet_processor.js  critical_bands.rs  interval.rs  interval_display.rs  lib.rs  limiter.rs  main.rs  midi.rs  piano_gui.rs  piano_state.rs  piano_types.rs  reverb.rs  synth.rs  theme.rs  theory.rs  utils.rs  webaudio.rs
src/piano_gui/: types.rs
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: check.rs  dev.rs  main.rs  utils.rs
