[package]
name = "dissonance-audio-worklet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "AudioWorkletProcessor",
  "AudioWorkletGlobalScope",
  "MessageEvent",
  "MessagePort",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
crossbeam = "0.8.4"
wmidi = "4.0.10"

# Include shared audio types and engine
dissonance-audio-types = { path = "../audio-types" }
dissonance-audio-engine = { path = "../audio-engine" }
