[package]
name = "audio-worklet"
version = "0.0.1"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2024"
rust-version = "1.87"

# # Support both library and binary
# [lib]
# crate-type = ["cdylib", "rlib"]
# 
# [[bin]]
# name = "audio-worklet"
# path = "src/main.rs"

[dependencies]
wmidi = "4.0.10"
crossbeam = "0.8.4"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
shared-types = { path = "../shared-types" }

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioWorkletGlobalScope",
  "AudioWorkletProcessor",
  "console",
  "MessagePort",
]
