[package]
name = "dev-log-server"
version = "0.1.0"
edition = "2024"
authors = ["Joel Nises <joel.nises@gmail.com>"]
description = "Development log server for dissonance-lab frontend logging"

[[bin]]
name = "dev-log-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.97"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-appender = "0.2"

