[package]
name = "dev-log-server"
version = "0.1.0"
edition = "2024"
authors = ["Joel Nises <joel.nises@gmail.com>"]
description = "Development log server for dissonance-lab frontend logging"

[[bin]]
name = "dev-log-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

