[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["Joel Nises <joel.nises@gmail.com>"]
description = "Development utility tasks for dissonance-lab"

# Ensure xtask always builds for the native target, never WASM
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
which = "7.0"